--- a/Easy_to_hard_cifar10.ipynb
+++ b/Easy_to_hard_cifar10.ipynb
@@ -2,13 +2,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "YQQ8vSuzV36n",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bb98370f-8241-404a-c378-de802822a767"
+        "outputId": "d1ee3983-ded9-4ae8-db6a-ec3dc943ff64"
       },
       "outputs": [
         {
@@ -44,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "S_j_jMKjXuMo"
       },
@@ -109,7 +109,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "WWuYJoXN2mCY"
       },
@@ -122,21 +122,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "metadata": {
         "id": "q_uaN5Tn0Jw-"
       },
       "outputs": [],
       "source": [
-        "# def calculate_entropy(image, x_axis = True):\n",
-        "#     grey_img = image.convert('L')\n",
-        "#     grey_img = np.array(grey_img).flatten()\n",
-        "#     entropy = drv.entropy(grey_img, Alphabet_X=np.arange(0, 256))\n",
-        "#     return entropy\n",
         "def calculate_entropy(img):\n",
-        "    image = np.array(img)\n",
-        "    image = image / 255.0\n",
-        "    entropy = shannon_entropy(image)\n",
+        "    # convert image to gray-scale\n",
+        "    gray_image = img.convert('L')\n",
+        "    gray_image = np.array(gray_image)\n",
+        "    gray_image = gray_image / 255.0\n",
+        "\n",
+        "    # Compute histogram of image pixel intensities\n",
+        "    hist = np.histogram(gray_image, bins=256)[0]\n",
+        "    \n",
+        "    # Normalize histogram to compute probabilities\n",
+        "    probabilities = hist / np.sum(hist)\n",
+        "    \n",
+        "    # Compute entropy\n",
+        "    entropy = -np.sum(probabilities * np.log2(probabilities + np.finfo(float).eps))\n",
+        "\n",
         "    return entropy\n",
         "\n",
         "def sort_by_entropy(origin_dataset):\n",
@@ -153,7 +159,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "b7RUTfNyw2c2"
       },
@@ -167,9 +173,9 @@
         "      torchvision.transforms.RandomCrop(32, padding=4),\n",
         "      torchvision.transforms.RandomHorizontalFlip(),\n",
         "      torchvision.transforms.ToTensor(),\n",
-        "      normalize\n",
+        "      normalize,\n",
+        "      Cutout(n_holes=1, length=16)\n",
         "    ])\n",
-        "    transform_train.transforms.append(Cutout(n_holes=1, length=16))\n",
         "\n",
         "    trainset, entropy_values = sort_by_entropy(trainset)\n",
         "\n",
@@ -206,11 +212,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
-        "id": "B8mU6aSb3qpt"
+        "id": "B8mU6aSb3qpt",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "89a7aa01-1dcc-4723-8ecb-c41a68dc886f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz to data/cifar-10-python.tar.gz\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 170498071/170498071 [00:14<00:00, 11943629.66it/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Extracting data/cifar-10-python.tar.gz to data\n",
+            "Files already downloaded and verified\n",
+            "number of train images:50000\n",
+            "number of test images:10000\n"
+          ]
+        }
+      ],
       "source": [
         "transform_test = torchvision.transforms.Compose([\n",
         "    torchvision.transforms.ToTensor(),\n",
@@ -225,7 +260,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "OlyhQTb0SxZ2"
       },
@@ -335,7 +370,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "DBV-aR26lspA"
       },
@@ -352,7 +387,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "id": "wPQRmXPIEJ_-"
       },
@@ -367,7 +402,7 @@
         "torch.manual_seed(5)\n",
         "torch.cuda.manual_seed(5)\n",
         "\n",
-        "def run_model(model, optimizer, learning_rate, epoch_num, train_sets, testloader, epoch_per_chunk):\n",
+        "def trian_model(model, optimizer, learning_rate, epoch_num, train_sets, testloader, epoch_per_chunk):\n",
         "    if train_on_gpu:\n",
         "       model.cuda()\n",
         "\n",
@@ -387,20 +422,25 @@
         "\n",
         "    count_complext_lr = 0\n",
         "    current_lr = 0\n",
+        "    # Before training loop, initialize a counter for the total number of iterations\n",
+        "    total_iterations = 0\n",
+        "\n",
         "    for i_epoch in p_bar:\n",
         "        model.train()\n",
         "\n",
         "        # change chunk index.\n",
         "        if (i_epoch + 1) > sum(epoch_per_chunk[0:(chunk_index+1)]):\n",
+        "          total_iterations = 0\n",
         "          chunk_index += 1\n",
         "          traversed_chuncks.append(chunk_index)\n",
         "          info_message += log_info((i_epoch+1), chunk_index)\n",
         "\n",
         "        train_set = train_sets[chunk_index]\n",
-        "        # max_iter = epoch_num * len(train_sets[3])\n",
-        "        max_iter = epoch_num * len(train_sets[0]) # to do: it is better to change it to calculate all iterations\n",
+        "        # max_iter = epoch_num * len(train_sets[0])\n",
+        "        max_iter = epoch_num * len(train_set)\n",
         "        for i_batch, (X_batch, y_batch) in enumerate(train_set):\n",
-        " \n",
+        "            # After each batch, increment the total_iterations\n",
+        "            total_iterations += 1\n",
         "            if(train_on_gpu):\n",
         "                X_batch, y_batch = X_batch.cuda(), y_batch.cuda()\n",
         "\n",
@@ -412,8 +452,7 @@
         "            loss = loss.mean() # added for example_forgetting github \n",
         "            loss.backward()  # backpropogate loss to calculate gradients\n",
         " \n",
-        "            current_iter = i_epoch * len(train_set) + i_batch + 1\n",
-        "            new_lr = poly_learning_rate(learning_rate, current_iter, max_iter, power=0.9)\n",
+        "            new_lr = poly_learning_rate(learning_rate, total_iterations, max_iter, power=0.9)\n",
         "            if type(new_lr) == complex:\n",
         "              count_complext_lr += 1\n",
         "            else:\n",
@@ -422,12 +461,11 @@
         "            for g in optimizer.param_groups:\n",
         "                 g['lr'] = current_lr\n",
         "            lr_arr.append(current_lr)\n",
-        "            lr_arr.append(current_lr)\n",
         "\n",
         "            try:\n",
         "              optimizer.step()  # update model weights  \n",
         "            except:\n",
-        "              print('current_iter: '+ str(current_iter))\n",
+        "              print('current_iter: '+ str(total_iterations))\n",
         "              print('last max_iter: '+ str(max_iter))\n",
         "              print('last learning: '+ str(current_lr))\n",
         "              optimizer.step()  # update model weights  \n",
@@ -463,29 +501,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
       "metadata": {
         "id": "IqUDZkDN5P3D",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4377659e-9d38-4c65-97d4-f2a447127c44"
+        "outputId": "011ecf9a-3638-4e96-f7a3-962efcae5874"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "number of remaining train images in chunk 0:16500\n",
-            "number of remaining train images in chunk 1:16500\n",
-            "number of remaining train images in chunk 2:17000\n",
+            "number of remaining train images in chunk 0:2500\n",
+            "number of remaining train images in chunk 1:7500\n",
+            "number of remaining train images in chunk 2:40000\n",
             "number of remaining train images in chunk 3:50000\n",
             "number of test images:10000\n"
           ]
         }
       ],
       "source": [
-        "train_sets, testloader = get_dataloader(trainset, testset, [0.33,0.33,0.34])\n",
+        "train_sets, testloader = get_dataloader(trainset, testset, [0.05,0.15,0.80]) \n",
         "print('number of remaining train images in chunk 0:' + str(len(train_sets[0].dataset)))\n",
         "print('number of remaining train images in chunk 1:' + str(len(train_sets[1].dataset)))\n",
         "print('number of remaining train images in chunk 2:' + str(len(train_sets[2].dataset)))\n",
@@ -498,8 +536,8 @@
       "source": [
         "resNet18 = ResNet18()  \n",
         "optimizer = torch.optim.SGD\n",
-        "epoch_per_chunk = [15, 15, 20, 1]\n",
-        "val_acc, lr_arr = run_model(resNet18, optimizer, 0.1, 51, train_sets, testloader, epoch_per_chunk)"
+        "epoch_per_chunk = [3, 7, 40, 1]\n",
+        "val_acc, lr_arr = trian_model(resNet18, optimizer, 0.1, 51, train_sets, testloader, epoch_per_chunk)"
       ],
       "metadata": {
         "id": "LNjgmTlIQnOx"
@@ -524,10 +562,24 @@
     {
       "cell_type": "code",
       "source": [
+        "plt.plot(val_acc)  \n",
+        "plt.xlabel('steps')\n",
+        "plt.ylabel('acc value')\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "Do-Pf5H8os8L"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# run conventional model\n",
         "import copy\n",
         "\n",
-        "def run_conventional_model(model, optimizer, learning_rate, epoch_num, train_set, testloader):\n",
+        "def train_conventional_model(model, optimizer, learning_rate, epoch_num, train_set, testloader):\n",
         "    if train_on_gpu:\n",
         "       model.cuda()\n",
         "\n",
@@ -546,14 +598,14 @@
         " \n",
         "    count_complext_lr = 0\n",
         "    current_lr = 0\n",
+        "    total_iterations = 0\n",
+        "\n",
         "    for i_epoch in p_bar:\n",
         "        model.train()\n",
         "\n",
         "        max_iter = epoch_num * len(train_set)\n",
-        "        for i_batch, (X_batch, y_batch) in enumerate(train_set):\n",
-        "              \n",
-        "            it = i_epoch * len(train_set) + i_batch\n",
-        " \n",
+        "        for i_batch, (X_batch, y_batch) in enumerate(train_set):         \n",
+        "            total_iterations += 1\n",
         "            if(train_on_gpu):\n",
         "                X_batch, y_batch = X_batch.cuda(), y_batch.cuda()\n",
         "\n",
@@ -564,30 +616,21 @@
         "\n",
         "            loss = loss.mean() # added for example_forgetting github \n",
         "            loss.backward()  # backpropogate loss to calculate gradients\n",
-        " \n",
-        "            # if chunk_index != 3:\n",
-        "            current_iter = i_epoch * len(train_set) + i_batch + 1\n",
-        "            new_lr = poly_learning_rate(learning_rate, current_iter, max_iter, power=0.9)\n",
-        "            if type(new_lr) == complex:\n",
-        "              count_complext_lr += 1\n",
-        "            else:\n",
-        "              current_lr = new_lr\n",
+        "  \n",
+        "            current_lr = poly_learning_rate(learning_rate, total_iterations, max_iter, power=0.9)\n",
         "              \n",
         "            for g in optimizer.param_groups:\n",
         "                 g['lr'] = current_lr\n",
-        "            lr_arr.append(current_lr)\n",
         "            lr_arr.append(current_lr)\n",
         "\n",
         "            try:\n",
         "              optimizer.step()  # update model weights  \n",
         "            except:\n",
-        "              print('current_iter: '+ str(current_iter))\n",
+        "              print('current_iter: '+ str(total_iterations))\n",
         "              print('last max_iter: '+ str(max_iter))\n",
         "              print('last learning: '+ str(current_lr))\n",
         "              optimizer.step()  # update model weights  \n",
-        "            \n",
-        " \n",
-        " \n",
+        "             \n",
         "        correct = 0\n",
         "        total = 0\n",
         "        with torch.no_grad():  # no need to calculate gradients when assessing accuracy\n",
@@ -624,7 +667,7 @@
       "source": [
         "resNet18 = ResNet18()  \n",
         "optimizer = torch.optim.SGD\n",
-        "val_acc, lr_arr = run_conventional_model(resNet18, optimizer, 0.1, 201, train_sets[3], testloader)"
+        "val_acc, lr_arr = train_conventional_model(resNet18, optimizer, 0.1, 51, train_sets[3], testloader)"
       ],
       "metadata": {
         "id": "qcQ4SDtH_N3R"
