--- a/Redundancy_Cifar100.ipynb
+++ b/Redundancy_Cifar100.ipynb
@@ -122,17 +122,21 @@
         "#     grey_img = np.array(grey_img).flatten()\n",
         "#     entropy = drv.entropy(grey_img, Alphabet_X=np.arange(0, 256))\n",
         "#     return entropy\n",
-        "# def calculate_entropy(img):\n",
-        "#     histogram = img.histogram()\n",
-        "#     total_pixels = sum(histogram)\n",
-        "#     probabilities = [count / total_pixels for count in histogram]\n",
-        "#     entropy = -sum(p * math.log2(p) for p in probabilities if p > 0)\n",
-        "#     return entropy\n",
-        "\n",
         "def calculate_entropy(img):\n",
-        "    image = np.array(img)\n",
-        "    image = image / 255.0\n",
-        "    entropy = shannon_entropy(image)\n",
+        "    # convert image to gray-scale\n",
+        "    gray_image = img.convert('L')\n",
+        "    gray_image = np.array(gray_image)\n",
+        "    gray_image = gray_image / 255.0\n",
+        "\n",
+        "    # Compute histogram of image pixel intensities\n",
+        "    hist = np.histogram(gray_image, bins=256)[0]\n",
+        "    \n",
+        "    # Normalize histogram to compute probabilities\n",
+        "    probabilities = hist / np.sum(hist)\n",
+        "    \n",
+        "    # Compute entropy\n",
+        "    entropy = -np.sum(probabilities * np.log2(probabilities + np.finfo(float).eps))\n",
+        "\n",
         "    return entropy"
       ],
       "metadata": {
